--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "lintfix": "prettier --write --list-different . && yarn lint:js --fix && yarn lint:style --fix"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.6",
     "@types/chart.js": "^2.9.37",
     "chart.js": "^3.9.1",
+    "cookie-universal-nuxt": "^2.2.2",
     "core-js": "^3.25.3",
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
