--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chart.js": "^3.9.1",
     "cookie-universal-nuxt": "^2.2.2",
     "core-js": "^3.25.3",
+    "dayjs": "^1.11.8",
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
     "vue-chartjs": "^4.1.2",
