--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@sweetalert2/theme-bootstrap-4": "^5.0.15",
     "@types/chart.js": "^2.9.37",
     "chart.js": "^3.9.1",
     "cookie-universal-nuxt": "^2.2.2",
     "core-js": "^3.25.3",
     "dayjs": "^1.11.8",
     "nuxt": "^2.15.8",
+    "sweetalert2": "^11.7.12",
     "vue": "^2.7.10",
     "vue-chartjs": "^4.1.2",
     "vue-server-renderer": "^2.7.10",
