--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/toast": "^3.3.1",
     "@sweetalert2/theme-bootstrap-4": "^5.0.15",
     "@types/chart.js": "^2.9.37",
     "chart.js": "^3.9.1",
