--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cookie-universal-nuxt": "^2.2.2",
     "core-js": "^3.25.3",
     "dayjs": "^1.11.8",
+    "jsonwebtoken": "^9.0.0",
     "nuxt": "^2.15.8",
     "sweetalert2": "^11.7.12",
     "vue": "^2.7.10",
