update sale page

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "core-js": "^3.25.3",
     "dayjs": "^1.11.8",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "nuxt": "^2.15.8",
+    "pdfmake": "^0.2.7",
     "sweetalert2": "^11.7.12",
     "vue": "^2.7.10",
     "vue-chartjs": "^4.1.2",
