--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dayjs": "^1.11.8",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "nuxt": "^2.15.8",
     "pdfmake": "^0.2.7",
     "sweetalert2": "^11.7.12",
